--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Imports: 
     ggplot2,
+    glue,
     grDevices,
+    readr,
+    stringr,
     writexl
